# internal/handler/discover/recommend.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"net/http"
 	service "wyy/internal/service/discover"
 
 	"github.com/gin-gonic/gin"
@@ -10,19 +11,31 @@ type RecommendHandler struct {
 	RecommendService *service.RecommendService
 }
 
-func NewRecommendHandler(userService *service.RecommendService) *RecommendHandler {
-	return &RecommendHandler{RecommendService: userService}
+func NewRecommendHandler(recommendService *service.RecommendService) *RecommendHandler {
+	return &RecommendHandler{RecommendService: recommendService}
 }
 
+// RegisterRoutes 实现 route.Registrar 接口
 func (h *RecommendHandler) RegisterRoutes(r gin.IRouter) {
-	//recommends := r.Group("/recommends")
+	recommends := r.Group("/recommends")
 	{
-		//recommends.GET("/", h.GetRecommendations)
-		// ...
+		recommends.GET("/banners", h.getReBanners)
 	}
 }
 
-// 从数据库拿到 banner 的图片链接
+// getReBanners 返回 Banner 假数据
+// @Summary      获取推荐 Banner
+// @Description  返回 Banner 图片 URL 列表（当前为假数据）
+// @Tags         推荐模块
+// @Produce      json
+// @Success      200  {object}  map[string]interface{}  "成功返回 banners 列表"
+// @Router       /api/recommends/banners [get]
+// @Example      { "banners": ["https://p5.music.126.net/obj/wonDlsKUwrLClGjCm8Kx/78326360541/d092/1425/a80f/5ee0ef793063a2f70d3001d5cacc517c.jpg"] }
 func (h *RecommendHandler) getReBanners(c *gin.Context) {
-
+	banners := []string{
+		"https://p5.music.126.net/obj/wonDlsKUwrLClGjCm8Kx/78326360541/d092/1425/a80f/5ee0ef793063a2f70d3001d5cacc517c.jpg",
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"banners": banners,
+	})
 }
